# GNN-LSTM-based-Fusion-Model-for-Structural-Dynamic-Responses-Prediction

./: check.py  checkData.ipynb  inference.py  inference_arg.py  normalization_check.csv  test_GAT_LSTM.py  test_GCN_LSTM.py  train_GAT_LSTM_arg.py  train_GCN_LSTM.py  train_GCN_LSTM_arg.py
Data/Linear_Analysis/eval/ChiChi/structure_401/: gm_1999.09.21_01.47.159_Chichi_TCU011_A900_90.0.txt  structure.ipt  structure_config.json
Data/Linear_Analysis/eval/ChiChi/structure_402/: structure.ipt  structure_config.json
Data/Linear_Analysis/eval/ChiChi/structure_403/: gm_1999.09.21_01.47.159_Chichi_CHY063_A900_0.0.txt  structure.ipt  structure_config.json
Data/Linear_Analysis/eval/ChiChi/structure_404/: gm_1999.09.21_01.47.159_Chichi_CHY028_A900_0.0.txt  structure_config.json
Data/Linear_Analysis/eval/ChiChi/structure_405/: gm_1999.09.21_01.47.159_Chichi_HWA013_A900_0.0.txt  structure.ipt  structure_config.json
Data/Linear_Analysis/eval/ChiChi/structure_406/: gm_1999.09.21_01.47.159_Chichi_CHY086_A900A_90.0.txt  structure.ipt  structure_config.json
Data/Linear_Analysis/eval/ChiChi/structure_407/: gm_1999.09.21_01.47.159_Chichi_CHY109_A800_90.0.txt  structure.ipt  structure_config.json
Data/Linear_Analysis/eval/ChiChi/structure_408/: structure.ipt  structure_config.json  (+1 more)
Inference/Acceleration/: arg.json  model.pt  normalized_item_dict.pth
Inference/Displacement/: arg.json  model.pt  normalized_item_dict.pth
Inference/Velocity/: arg.json  model.pt  normalized_item_dict.pth
Utils/: dataset.py
abcd/: normalize_explain.py  pyproject.toml  testnormalize.py
(+302 files in other folders)
